--- a/JavaRFIDStoreSimulator/.classpath
+++ b/JavaRFIDStoreSimulator/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="C:/Users/DavidThinkle/Dropbox/InformationLab/RecommendationSystem/Implementation/JavaRFIDStoreSimulator/commons-csv-1.1-bin/commons-csv-1.1/commons-csv-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
