--- a/JavaRFIDStoreSimulator/.classpath
+++ b/JavaRFIDStoreSimulator/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="lib"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/DavidThinkle/Dropbox/InformationLab/RecommendationSystem/Implementation/JavaRFIDStoreSimulator/commons-csv-1.1-bin/commons-csv-1.1/commons-csv-1.1.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Users/ding/Dropbox/informationlab/RecommendationSystem/Implementation/JavaRFIDStoreSimulator/commons-csv-1.1-bin/commons-csv-1.1/commons-csv-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
